--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="about-container">
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="Screenshot 2025-12-04 182305.png" alt="Project 1" class="project-img">
+              <img src="eternal.png" alt="Project 1" class="project-img">
             </div>
             <h2 class="experience-sub-title project-title">Eternal Bloom</h2>
             <div class="btn-container">
@@ -151,7 +151,7 @@
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="Screenshot 2026-02-08 185547.png" alt="Project 2" class="project-img">
+              <img src="bday.png" alt="Project 2" class="project-img">
             </div>
             <h2 class="experience-sub-title project-title">Friend's-Bday</h2>
             <div class="btn-container">
