--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skill">Skill</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -33,7 +33,7 @@
             </div>
             <div class="menu-link">
                     <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                    <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+                    <li><a href="#skill" onclick="toggleMenu()">Skill</a></li>
                     <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                     <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </div>
@@ -91,7 +91,7 @@
         </div>
         </div>
     </div>
-    <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#experience'">
+    <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#skill'">
 </section>
 
 <section id="about">
@@ -131,7 +131,7 @@
         </div>
         </div>
     </div>
-    <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#experience'">
+    <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#projects'">
 </section>
 
 <section id="projects">
