--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#skill'">
 </section>
 
-<section id="about">
+<section id="skill">
     <p class="introduction">Don't u want to know?</p>
     <h1 class="name">Skill</h1>
     <div class="section-cantainer">
@@ -131,7 +131,7 @@
         </div>
         </div>
     </div>
-    <img src="arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='#projects'">
+    <img src="arrow.png" alt="arrow icon" class="icon arrow-proj" onclick="location.href='#projects'">
 </section>
 
 <section id="projects">
