--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <h1 class="name">Yessica Jaklin</h1>
         <p class="job">University of Sumatera Utara Students</p>
         <div class="button-container">
-            <button class="btn btn2" onclick="location.href='./#contact'">Contact Info</button>
+            <button class="btn btn2" onclick="location.href='#contact'">Contact Info</button>
         </div>
         <div class="sosmed-container">
-            <img src="instagram.png" alt="" onclick="location.href='https:/www.instagram.com/yezicaj/'" class="icon">
-            <img src="github.png" alt="" onclick="location.href='https:/github.com/yezicaj-byte/'" class="icon">
+            <img src="instagram.png" alt="" onclick="location.href='https://www.instagram.com/yezicaj'" class="icon">
+            <img src="github.png" alt="" onclick="location.href='https://github.com/yezicaj-byte'" class="icon">
         </div>
 </section>
 
@@ -145,8 +145,8 @@
             </div>
             <h2 class="experience-sub-title project-title">Eternal Bloom</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https:/github.com/DemonAITYX/EternalBloom/'"> Github</button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https:/github.com/DemonAITYX/EternalBloom/'"> Live Demo</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/DemonAITYX/EternalBloom'"> Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/DemonAITYX/EternalBloom'"> Live Demo</button>
             </div>
           </div>
           <div class="details-container color-container">
@@ -155,8 +155,8 @@
             </div>
             <h2 class="experience-sub-title project-title">Friend's-Bday</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https:/github.com/yezicaj-byte/Friend-s-Bday/'"> Github</button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https:/github.com/yezicaj-byte/Friend-s-Bday/'"> Live Demo</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/yezicaj-byte/Friend-s-Bday'"> Github</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/yezicaj-byte/Friend-s-Bday'"> Live Demo</button>
             </div>
           </div>
           </div>
@@ -175,7 +175,7 @@
         </div>
         <div class="contact-info-container">
           <img src="github.png" alt="LinkedIn icon" class="icon contact-icon">
-          <p><a href="https:/www.github.com/yezicaj-byte/">Github</a></p>
+          <p><a href="https://github.com/yezicaj-byte/Friend-s-Bday">Github</a></p>
         </div>
       </div>
     </section>
