--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
         <div class="contact-info-container">
           <img src="github.png" alt="LinkedIn icon" class="icon contact-icon">
-          <p><a href="https://github.com/yezicaj-byte/Friend-s-Bday">Github</a></p>
+          <p><a href="https://github.com/yezicaj-byte">Github</a></p>
         </div>
       </div>
     </section>
